	tweet timeline spec.
	* test/test-twittering-mode.el: Add a test for a `single tweet'
	timeline spec.
	* README.markdown: Add an explanation for a `single tweet'
	timeline spec.

	* twittering-mode.el: Add the expanded uri to the url string as a
	property if possible.
	(twittering-make-fontified-tweet-text-with-entity): add the
	expanded-uri property to the url string.

2012-04-02  Tadashi MATSUO  <tad@mymail.twin.jp>

	* README.markdown: Fix the order of tags.

2012-04-01  Tadashi MATSUO  <tad@mymail.twin.jp>

	* README.markdown: Fix the explanation of the key binding 'd'.

	* README.markdown: Add an explanation how to post an
	official/native retweet.

	* README.markdown: Add basic key bindings to the 'Quick start'
	section.

	* twittering-mode.el: Bind "C-cC-w" to
	`twittering-delete-status'. The binding is a future replacement
	for "C-cD", which violates the Emacs Key Binding Conventions.
	(twittering-mode-map): bind "C-cC-w" to the function
	`twittering-delete-status'.
	* README.markdown: Fix the documents related to "C-cD".

	* twittering-mode.el: Add a new variable
	`twittering-pop-to-buffer-function' to specify how to open a
	window for an edit buffer. Previously, a window for an edit buffer
	was opened by invoking the function `pop-to-buffer' with
	specifying non-nil as the argument NORECORD. This was an ad-hoc
	solution of the problem that an edit buffer was assigned on a
	different window for each time. However, with the solution, a
	window for an edit buffer might be hidden by opening another
	window because the window for an edit buffer was not recorded in
	the list of recently selected windows. To avoid the behavior, new
	functions open a window with a fixed rule and record a new window
	in the list.
	(twittering-pop-to-buffer-function): new variable.
	(twittering-pop-to-buffer): new function, which just invokes the
	function specified by `twittering-pop-to-buffer-function'.
	(twittering-pop-to-buffer-simple): new function for the new